# confpool

./: .gitignore  .gitmodules  CMakeLists.txt  build_script.py  setup.py  winbuild_script.py
release_files/: setup.py
release_files/myconfscript/: libgslcblas.so.0
release_files/pyxyz/: __init__.py
release_files/pyxyz/test/: __init__.py  check.xyz  crest_conformersA.xyz
src/: confpool.cpp  confpool.h  hungarian.cpp  hungarian.h  main.cpp  molproxy.cpp  molproxy.h  rmsd.cpp  rmsd.h  utils.cpp  utils.h
tests/: __init__.py  example.py  mytest.py  testexample.py
tests/oldfiles/: mytest.py
win_release_files/: setup.py
win_release_files/pyxyz/: __init__.py
win_release_files/pyxyz/test/: __init__.py
win_tests/: aminoacid_ensemble.xyz  hydrogen_atom.xyz  mytest.py  test_res2.xyz
win_tests/boosttest/: CMakeLists.txt  main.cpp
win_tests/simple_py/: CMakeLists.txt  main.cpp  mytest.py  setup.py
